<resources>
    <string name="app_name">Android_ex_SystemSetting</string>
    <string name="btn_wifi_setting">와이파이 설정</string>
    <string name="btn_bluetooth_setting">블루투스 설정</string>
    <string name="btn_sound_setting">소리 설정</string>
    <string name="btn_display_setting">디스플레이 설정</string>
    <string name="btn_battery_setting">배터리 설정</string>
    <string name="btn_storage_setting">저장공간 설정</string>
    <string name="btn_location_setting">위치 설정</string>
    <string name="btn_security_setting">보안 설정</string>
</resources>